fixed portrait z-index

--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -81,7 +81,7 @@
     }
 }
 .portraitContainer {
-    z-index: -1;
+    z-index: 0;
 }
 
 .portrait {
